--- a/EstacionamentoFinal/Views/Movimentacao/Index.cshtml
+++ b/EstacionamentoFinal/Views/Movimentacao/Index.cshtml
@@ -6,7 +6,8 @@
 }
 
 <h2>Gerenciamento Veiculo</h2>
-@Html.ActionLink("Cadastrar Movimentação", "Cadastrar", "Movimentacao")
+@Html.ActionLink("Cadastrar Movimentação", "Cadastrar", "Movimentacao", new { @class = "btn btn-primary"})
+@Html.ActionLink("Finalizadas", "Finalizadas", "Movimentacao", new { @class = "btn btn-warning" })
 <br />
 
 <table class="table table-striped table-bordered">
@@ -19,16 +20,17 @@
     </tr>
     @foreach (EstacionamentoFinal.Models.Movimentacao movimentacao in movimentacoes)
     {
+        if (!movimentacao.Finalizada) { 
         <tr>
             <td>@movimentacao.Veiculo.Placa</td>
             <td>@movimentacao.Vaga.Identificador</td>
-            <td>@movimentacao.Entrada</td>
+            <td>@movimentacao.Entrada.ToString("dd/MM HH:mm")</td>
 
             @if(DateTime.Equals(movimentacao.Entrada, movimentacao.Saida))
             {
                 <td>Não Saiu</td> 
             } else { 
-                <td>@movimentacao.Saida </td>}
+                <td>@movimentacao.Saida.ToString("dd/MM HH:mm") </td>}
             <td>
                 @Html.ActionLink("Remover", "Remover", "Movimentacao",
                new { id = movimentacao.IdMovimentacao },
@@ -43,6 +45,7 @@
                new { @class = "btn-sm brn-primary" })
             </td>
         </tr>
+        }
     }
 </table>
 
