--- a/EstacionamentoFinal/Views/Setor/Index.cshtml
+++ b/EstacionamentoFinal/Views/Setor/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h1>Gerenciamento das Vagas</h1>
-@Html.ActionLink("Cadastrar Setor", "Cadastrar", "Setor")
+@Html.ActionLink("Cadastrar Setor", "Cadastrar", "Setor", new { @class = "btn btn-primary" })
 <br />
 
 <table class="table table-striped table-bordered">
