--- a/EstacionamentoFinal/Views/Vaga/Index.cshtml
+++ b/EstacionamentoFinal/Views/Vaga/Index.cshtml
@@ -7,7 +7,7 @@
     
 }
 <h1>Gerenciamento das Vagas</h1>
-@Html.ActionLink("Cadastrar Vaga", "Cadastrar", "Vaga")
+@Html.ActionLink("Cadastrar Vaga", "Cadastrar", "Vaga", new { @class = "btn btn-primary" })
 <br />
 
 <table class="table table-striped table-bordered table-responsive-lg">
@@ -16,7 +16,7 @@
         <th>Setor</th>
         <th>Ações</th>
         <th>Status</th>
-        <th>Histórico</th>
+        @*<th>Histórico</th>*@
         <th>Identificador</th>
     </tr>
     @foreach (EstacionamentoFinal.Models.Vaga vaga in vagas)
@@ -39,11 +39,11 @@
             {
                 <td bgcolor="#4dff4d">Livre</td>
             }
-            </td>
-            <td>@Html.ActionLink("Visualizar", "Visualizar", "Vaga",
+
+            @*<td>@Html.ActionLink("Visualizar", "Visualizar", "Vaga",
                new { @id = vaga.IdVaga },
                new { @class = "btn btn-primary btn-sm" })
-            </td>
+            </td>*@
             @*<td>@vaga.Setor.Nome.Substring(0,1)-@vaga.IdVaga</td>*@
             <td>@vaga.Identificador.Substring(0,2)</td>
         </tr>
