--- a/EstacionamentoFinal/Views/Vaga/Index.cshtml
+++ b/EstacionamentoFinal/Views/Vaga/Index.cshtml
@@ -31,6 +31,11 @@
                 @Html.ActionLink("Alterar", "Alterar", "Vaga",
                 new { @id = vaga.IdVaga},
                 new { @class = "btn btn-warning btn-sm"})
+
+                @Html.ActionLink("Historico", "Historico", "Vaga",
+                new { @id = vaga.IdVaga },
+                new { @class = "btn btn-success btn-sm" })
+
             @if (vaga.Ocupado == true)
             {
                 <td bgcolor="#ff0000">Ocupado</td>
