--- a/EstacionamentoFinal/Views/Vaga/Historico.cshtml
+++ b/EstacionamentoFinal/Views/Vaga/Historico.cshtml
@@ -5,7 +5,7 @@
         ViewBag.Title = "Alterar";
         Layout = "~/Views/Shared/_Layout.cshtml";
         //Vaga v = ViewBag.Vagas;
-        List<EstacionamentoFinal.Models.Movimentacao> movimentacao = ViewBag.Vagas;
+        List<EstacionamentoFinal.Models.Movimentacao> movimentacao = ViewBag.Movimentacao;
     }
 
     <div class="container">
@@ -16,12 +16,14 @@
                 <th>Entrada</th>
                 <th>Saida</th>
             </tr>
-            @*@foreach (EstacionamentoFinal.Models.Movimentacao)
+            @foreach (EstacionamentoFinal.Models.Movimentacao movimentacoes in movimentacao)
             {
                 <tr>
-                    <td>@</td>
-                    <td>vaga.Identificador</td>
+                    <td>@movimentacoes.Veiculo.Placa</td>
+                    <td>@movimentacoes.Vaga.Identificador</td>
+                    <td>@movimentacoes.Entrada</td>
+                    <td>@movimentacoes.Saida</td>
                 </tr>
-            }*@
+            }
 </table>
 </div>
