--- a/EstacionamentoFinal/Views/Index/Index.cshtml
+++ b/EstacionamentoFinal/Views/Index/Index.cshtml
@@ -1,14 +1,28 @@
-﻿
+﻿@model EstacionamentoFinal.Models.Movimentacao
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<EstacionamentoFinal.Models.Movimentacao> Movimentacoes = ViewBag.Movimentacoes;
+    List<EstacionamentoFinal.Models.Vaga> VagaLivre = ViewBag.VagasLivres;
+    List<EstacionamentoFinal.Models.Veiculo> Veiculo = ViewBag.Veiculos;
+    List<EstacionamentoFinal.Models.Vaga> VagaTotal = ViewBag.VagasTotais;
+
 }
 
 <table class="table table-striped table-bordered">
     <tr>
-        <th>Quantidade Vagas Ocupadas</th>
+        <th>Quantidade Vagas Totais</th>
         <th>Quantidade Vagas Livres</th>
         <th>Quantidade Carros</th>
     </tr>
+@*@foreach (EstacionamentoFinal.Models.Movimentacao movimentacao in movimentacoes)
+{*@
+    <tr>
+        <td>@VagaTotal.Count()</td>
+        <td>@VagaLivre.Count()</td>
+        <td>@Veiculo.Count()</td>
+
+    </tr>
+@*}*@
 </table>
 
