--- a/EstacionamentoFinal/Views/Shared/_Layout.cshtml
+++ b/EstacionamentoFinal/Views/Shared/_Layout.cshtml
@@ -10,11 +10,11 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a href="~/Index/Index" class="navbar-brand"> Estacionamento </a>
 
-        <ul class="navbar-nav">
+        @*<ul class="navbar-nav">
             <li class="nav-item">
                 <a href="~/Funcionario/Index" class="nav-link">Funcionarios</a>
             </li>
-        </ul>
+        </ul>*@
 
         <ul class="navbar-nav">
             <li class="nav-item">
