--- a/EstacionamentoFinal/Views/Movimentacao/Finalizadas.cshtml
+++ b/EstacionamentoFinal/Views/Movimentacao/Finalizadas.cshtml
@@ -16,6 +16,7 @@
         <th>Vaga</th>
         <th>Data/Hora Entrada</th>
         <th>Data/Hora Saida</th>
+        <th>Valor</th>
         <th>Ações</th>
     </tr>
     @foreach (EstacionamentoFinal.Models.Movimentacao movimentacao in movimentacoes)
@@ -26,6 +27,7 @@
                 <td>@movimentacao.Veiculo.Placa</td>
                 <td>@movimentacao.Vaga.Identificador</td>
                 <td>@movimentacao.Entrada.ToString("dd/MM - HH:mm")</td>
+                
 
                 @if (DateTime.Equals(movimentacao.Entrada, movimentacao.Saida))
                 {
@@ -34,6 +36,7 @@
                 else
                 {
                     <td>@movimentacao.Saida.ToString("dd/MM - HH:mm") </td>}
+                <td>@movimentacao.Pagamento</td>
                 <td>
                     @Html.ActionLink("Remover", "Remover", "Movimentacao",
                new { id = movimentacao.IdMovimentacao },
@@ -41,11 +44,8 @@
 
                     @Html.ActionLink("Alterar", "Alterar", "Movimentacao",
                new { id = movimentacao.IdMovimentacao },
-                new { @class = "btn-sm btn-warning" })
+               new { @class = "btn-sm btn-warning" })
 
-                    @Html.ActionLink("Saida", "Saida", "Movimentacao",
-               new { id = movimentacao.IdMovimentacao },
-               new { @class = "btn-sm btn-primary" })
                 </td>
             </tr>
         }
