--- a/EstacionamentoFinal/Views/Veiculo/Index.cshtml
+++ b/EstacionamentoFinal/Views/Veiculo/Index.cshtml
@@ -7,6 +7,7 @@
 
 <h2>Gerenciamento Veiculo</h2>
 @Html.ActionLink("Cadastrar Veiculo", "Cadastrar", "Veiculo", new { @class = "btn btn-primary" })
+@Html.ActionLink("Categorias", "IndexCategoria", "Veiculo", new { @class = "btn btn-warning" })
 <br />
 
 <table class="table table-striped table-bordered">
