--- a/EstacionamentoFinal/Views/Movimentacao/Finalizadas.cshtml
+++ b/EstacionamentoFinal/Views/Movimentacao/Finalizadas.cshtml
@@ -18,7 +18,7 @@
         <th>Data/Hora Saida</th>
         <th>Valor</th>
         <th>Ações</th>
-        <th>Teste</th>
+        <th>Total Minutos</th>
     </tr>
     @foreach (EstacionamentoFinal.Models.Movimentacao movimentacao in movimentacoes)
     {
