--- a/EstacionamentoFinal/Views/Vaga/Index.cshtml
+++ b/EstacionamentoFinal/Views/Vaga/Index.cshtml
@@ -50,7 +50,10 @@
                new { @class = "btn btn-primary btn-sm" })
             </td>*@
             @*<td>@vaga.Setor.Nome.Substring(0,1)-@vaga.IdVaga</td>*@
-            <td>@vaga.Identificador.Substring(0,2)</td>
+            <td>@vaga.Identificador.Substring(0,1)
+                -
+                @vaga.Setor.Nome.Substring(0,1)
+            </td>
         </tr>
     }
 </table>
