--- a/EstacionamentoFinal/Views/Veiculo/CadastrarCategoria.cshtml
+++ b/EstacionamentoFinal/Views/Veiculo/CadastrarCategoria.cshtml
@@ -3,12 +3,12 @@
 @using (Html.BeginForm("CadastrarCategoria", "Veiculo", FormMethod.Post, new { @class = "form-horizontal", enctype = "multipart/form-data" }))
 {
     <fieldset>
-        <legend>Cadastrar Veiculo</legend>
+        <legend>Cadastrar Categoria Veiculo</legend>
         @Html.ValidationSummary("", new { @class = "text-danger" })
         <div id="txtTamanho" class="form-group">
             @Html.LabelFor(model => model.Tamanho, new { @class = "control-label col-sm2" })
             <div class="col-sm-10">
-                @Html.TextBoxFor(model => model.Tamanho, new { @class = "form-control", @placeholder = "Placa do veículo" })
+                @Html.TextBoxFor(model => model.Tamanho, new { @class = "form-control", @placeholder = "Tamanho" })
                 @Html.ValidationMessageFor(model => model.Tamanho, null, new { @class = "text-danger" })
             </div>
         </div>
@@ -16,7 +16,7 @@
         <div id="txtValor" class="form-group">
             @Html.LabelFor(model => model.Valor, new { @class = "control-label col-sm2" })
             <div class="col-sm-10">
-                @Html.TextBoxFor(model => model.Valor, new { @class = "form-control", @placeholder = "Placa do veículo" })
+                @Html.TextBoxFor(model => model.Valor, new { @class = "form-control", @placeholder = "Valor Hora" })
                 @Html.ValidationMessageFor(model => model.Valor, null, new { @class = "text-danger" })
             </div>
         </div>
