--- a/EstacionamentoFinal/Views/Vaga/Index.cshtml
+++ b/EstacionamentoFinal/Views/Vaga/Index.cshtml
@@ -50,10 +50,7 @@
                new { @class = "btn btn-primary btn-sm" })
             </td>*@
             @*<td>@vaga.Setor.Nome.Substring(0,1)-@vaga.IdVaga</td>*@
-            <td>@vaga.Identificador.Substring(0,1)
-                -
-                @vaga.Setor.Nome.Substring(0,1)
-            </td>
+            <td>@vaga.Identificador</td>
         </tr>
     }
 </table>
