--- a/EstacionamentoFinal/Views/Shared/_Layout.cshtml
+++ b/EstacionamentoFinal/Views/Shared/_Layout.cshtml
@@ -40,6 +40,12 @@
             </li>
         </ul>
 
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="~/WebService/Index" class="nav-link">WebService</a>
+            </li>
+        </ul>
+
 
     </nav>
 
