--- a/EstacionamentoFinal/Views/Movimentacao/Index.cshtml
+++ b/EstacionamentoFinal/Views/Movimentacao/Index.cshtml
@@ -8,6 +8,7 @@
 <h2>Gerenciamento Veiculo</h2>
 @Html.ActionLink("Cadastrar Movimentação", "Cadastrar", "Movimentacao", new { @class = "btn btn-primary"})
 @Html.ActionLink("Finalizadas", "Finalizadas", "Movimentacao", new { @class = "btn btn-warning" })
+@Html.ActionLink("Buscar", "Buscar", "Movimentacao", new { @class = "btn btn-success"})
 <br />
 
 <table class="table table-striped table-bordered">
