--- a/EstacionamentoFinal/Views/Shared/_Layout.cshtml
+++ b/EstacionamentoFinal/Views/Shared/_Layout.cshtml
@@ -42,6 +42,12 @@
 
         <ul class="navbar-nav">
             <li class="nav-item">
+                <a href="~/ExternoAPI/Index" class="nav-link">Consulta Frete</a>
+            </li>
+        </ul>
+
+        <ul class="navbar-nav">
+            <li class="nav-item">
                 <a href="~/WebService/Index" class="nav-link">WebService</a>
             </li>
         </ul>
